--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -12,6 +12,7 @@ body {
   overflow-y: scroll;
   padding-left: 9px;
   background-color: #000; 
+  background-image: url(../images/5073414.jpg);
   overflow-x: hidden;
   color: #fff;
 
@@ -157,7 +158,7 @@ body {
   width: 100%;
   font-family: $font-family-mono, $font-family-sans;
   border-radius: 5px;
-  margin-bottom: 10px;
+  
 
   p {
     font-size: 16px;
