--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -43,6 +43,8 @@ body {
 .navbar,
 .navbar-expand-lg .navbar-light .bg-light {
   background-color: $primary-color;
+  width: 100%;
+  right: 5px;
   
 
   .navbar-brand,
@@ -76,7 +78,7 @@ body {
 
   h1 {
     font-size: $font-size-h1;
-    margin-bottom: 15px;
+    margin-bottom: 20px;
   }
 }
 
@@ -115,8 +117,8 @@ body {
   }
 
   .btn-primary {
-    padding: 10px 20px;
-    font-size: 18px;
+    padding: 10px 200px;
+    font-size: 10px;
     border: none;
     border-radius: 5px;
     background-color: #065878;
@@ -210,7 +212,7 @@ body {
   border-radius: 5px;
   margin-top: 50px;
   right: 0.01rem;
-
+  
 }
 
 
@@ -224,7 +226,7 @@ body {
 
 .novedad {
   flex: 0 0 calc(50% - 10px); /* Dos elementos en una fila, con margen entre ellos */
-  background-color: $primary-color;
+  background-color: rgb(33, 30, 30);
   border-radius: 5px;
   padding: 20px;
   text-align: center;
