--- a/css/styles.css
+++ b/css/styles.css
@@ -236,7 +236,7 @@ body li {
   width: 100%;
   font-family: "Martian Mono", monospace, "Overpass", sans-serif;
   border-radius: 5px;
-  margin-top: 30px;
+  margin-top: 20px;
   right: 0.01rem;
 }
 .footer p {
@@ -245,10 +245,7 @@ body li {
 }
 @media (max-width: 768px) {
   .footer {
-    margin-top: 0;
-    overflow-x: hidden;
-    margin-top: 0;
-    padding-bottom: 0;
+    margin-top: 5rem;
     overflow-x: hidden;
   }
 }
