--- a/css/styles.css
+++ b/css/styles.css
@@ -245,7 +245,8 @@ body li {
 }
 @media (max-width: 768px) {
   .footer {
-    margin-top: 5rem;
+    margin-top: 0;
+    padding-bottom: 0;
     overflow-x: hidden;
   }
 }
