--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -15,6 +15,9 @@ body {
   overflow-x: hidden;
   color: #fff;
   min-height: min-content;
+  position: relative;
+  min-height: 100vh;
+
 
   @media (max-width: 768px) {
     overflow-x: hidden;
@@ -83,6 +86,7 @@ body {
 
 .content {
   padding: 50px 0;
+  
   
 
   h2 {
@@ -158,7 +162,7 @@ body {
   background-color: $primary-color;
   padding: 20px 0;
   position: absolute;
-  margin-top: 0.1px;
+  margin-top: 20rem;
   width: 100%;
   font-family: $font-family-mono, $font-family-sans;
   border-radius: 5px;
@@ -188,7 +192,7 @@ body {
   margin-top: 50px;
   right: 0.01rem;
   @media (max-width: 768px) {
-    margin-top: 0;
+    margin-top: 4rem;
     padding-bottom: 0;
     overflow-x: hidden;
   }
@@ -229,6 +233,7 @@ body {
   display: flex;
   flex-wrap: wrap;
   gap: 20px; /* Espacio entre las novedades */
+  left: 100px;
 }
 
 .novedad {
@@ -266,7 +271,7 @@ body {
   width: 100%;
   font-family: $font-family-mono, $font-family-sans;
   border-radius: 5px;
-  margin-top: 20px;
+  margin-top: 30px;
   right: 0.01rem;
   bottom: 0;
   
@@ -277,7 +282,7 @@ body {
   }
 
   @media (max-width: 768px) {
-    margin-top: 0;
+    margin-top: 5rem;
     padding-bottom: 0;
     overflow-x: hidden;
   }
@@ -366,5 +371,9 @@ body {
 }
 
 .contactobody{
+  overflow-y: hidden;
+}
+
+.novedadesbody{
   overflow-y: hidden;
 }
