--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,3 @@
-@charset "UTF-8";
 body {
   font-family: "Martian Mono", monospace, "Overpass", sans-serif;
   overflow-y: scroll;
@@ -135,7 +134,6 @@ body li {
   }
 }
 
-/* Estilos para el footer de inicio en versión móvil */
 .footerinicio {
   background-color: #26ade4;
   padding: 20px 0;
@@ -153,11 +151,10 @@ body li {
   .footerinicio {
     top: 46rem;
     overflow-x: hidden;
-    margin-bottom: 0; /* Agrega este estilo para eliminar el margen inferior */
+    margin-bottom: 0;
   }
 }
 
-/* ... otros estilos ... */
 .footernove {
   background-color: #26ade4;
   padding: 20px 0;
@@ -170,7 +167,7 @@ body li {
 }
 @media (max-width: 768px) {
   .footernove {
-    margin-top: 4rem;
+    margin-top: 1rem;
     padding-bottom: 0;
     overflow-x: hidden;
   }
