--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -162,7 +162,7 @@ body {
   background-color: $primary-color;
   padding: 20px 0;
   position: absolute;
-  margin-top: 20rem;
+  margin-bottom: auto;
   width: 100%;
   font-family: $font-family-mono, $font-family-sans;
   border-radius: 5px;
