--- a/css/styles.css
+++ b/css/styles.css
@@ -162,8 +162,7 @@ body li {
   width: 100%;
   font-family: "Martian Mono", monospace, "Overpass", sans-serif;
   border-radius: 5px;
-  margin-top: 50px;
-  right: 0.01rem;
+  margin-top: 35px;
 }
 .footernove p {
   font-size: 16px;
@@ -171,7 +170,7 @@ body li {
 }
 @media (max-width: 768px) {
   .footernove {
-    top: 38rem;
+    top: 39.6rem;
     overflow-x: hidden;
   }
 }
@@ -185,6 +184,7 @@ body li {
   border-radius: 5px;
   margin-top: 50px;
   right: 0.01rem;
+  font-style: normal;
 }
 
 /* Estilos para las novedades */
@@ -244,11 +244,12 @@ body li {
 
 .slider {
   width: 100%;
-  height: 500px;
+  height: auto;
   overflow-x: hidden;
   position: relative;
   bottom: 1px;
   overflow-y: hidden;
+  border-radius: 20px;
 }
 .slider .slides {
   display: flex;
