--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -182,14 +182,13 @@ body {
 
 
 .footernove{
-  background-color:$primary-color;
+  background-color: $primary-color;
   padding: 20px 0;
   position: absolute;
   width: 100%;
   font-family: $font-family-mono, $font-family-sans;
   border-radius: 5px;
-  margin-top: 50px;
-  right: 0.01rem;
+  margin-top: 35px;  
  
   p {
     font-size: 16px;
@@ -197,7 +196,7 @@ body {
   }
 
   @media (max-width: 768px) {
-    top:38rem;
+    top:39.6rem;
     overflow-x: hidden;
  
   }
@@ -213,6 +212,7 @@ body {
   border-radius: 5px;
   margin-top: 50px;
   right: 0.01rem;
+  font-style: normal;
   
 }
 
@@ -280,11 +280,12 @@ body {
 
 .slider {
   width: 100%;
-  height: 500px;
+  height: auto;
   overflow-x: hidden;
   position: relative;
   bottom: 1px;
   overflow-y: hidden;
+  border-radius: 20px;
  
 
   .slides {
