--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -265,17 +265,21 @@ body {
   right: 0.01rem;
   bottom: 0;
   
+  
+
+
+  
 
   p {
     font-size: 16px;
     color: #fff;
   }
 
-  @media (max-width: 768px) {
+@media (max-width: 768px) {
     margin-top: 5rem;
     padding-bottom: 0;
     overflow-x: hidden;
-  }
+}
 }
 
 .slider {
@@ -367,4 +371,66 @@ body {
 
 .novedadesbody{
   overflow-y: hidden;
+}
+
+/* Estilos para las tarjetas */
+.card {
+  margin: 20px;
+  display: inline-block;
+  position: relative;
+  cursor: pointer;
+}
+
+.card img {
+  width: 100%; /* Ajusta la imagen al 100% del ancho de la tarjeta */
+  height: auto; /* Mantiene la proporción de aspecto */
+}
+
+.card .overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.7);
+  color: #fff;
+  opacity: 0;
+  transition: opacity 0.3s;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.card:hover .overlay {
+  opacity: 5;
+}
+
+
+
+.footer {
+  background-color: $primary-color; 
+  padding: 20px 0;
+  text-align: center;
+  color: #fff; 
+  
+  .container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+    .icons {
+      margin-bottom: 10px;
+
+      .icon {
+        width: 30px;
+        height: 30px;
+        margin: 0 5px; 
+      }
+    }
+
+    p {
+      font-size: 14px;
+    }
+  }
 }
