--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -254,33 +254,7 @@ body {
 }
 
 
-.footer {
-  background-color:$primary-color;
-  padding: 20px 0;
-  position: absolute;
-  width: 100%;
-  font-family: $font-family-mono, $font-family-sans;
-  border-radius: 5px;
-  margin-top: 30px;
-  right: 0.01rem;
-  bottom: 0;
-  
-  
 
-
-  
-
-  p {
-    font-size: 16px;
-    color: #fff;
-  }
-
-@media (max-width: 768px) {
-    margin-top: 5rem;
-    padding-bottom: 0;
-    overflow-x: hidden;
-}
-}
 
 .slider {
   width: 100%;
@@ -406,6 +380,17 @@ body {
   opacity: 5;
 }
 
+@media (max-width: 768px) {
+  .card{
+    font-size: 9.2px;
+
+  }
+  .card img{
+    width: 325px;
+    height: 260px;
+  }
+}
+
 
 
 .footer {
@@ -433,4 +418,9 @@ body {
       font-size: 14px;
     }
   }
+  @media (max-width: 768px) {
+    margin-top: 5rem;
+    padding-bottom: 0;
+    overflow-x: hidden;
+}
 }
