--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -475,3 +475,61 @@ body {
   border-radius: 10px;
   border-style:solid;  
 }
+
+/* Agrega estilos específicos para la página 404 */
+.body404 {
+  background-color: #000;
+  color: #fff;
+  font-family: $font-family-mono, $font-family-sans;
+  text-align: center;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 100vh;
+  margin: 0;
+
+  h1 {
+    font-size: 48px;
+    margin-bottom: 20px;
+  }
+  
+  p {
+    font-size: 24px;
+  }
+  
+  a {
+    color: $primary-color;
+    text-decoration: none;
+    font-weight: bold;
+    &:hover {
+      color: $hover-color;
+    }
+  }
+  
+  /* Estilo para el contenedor */
+  .container {
+    background-color: $primary-color;
+    padding: 20px;
+    border-radius: 8px;
+    box-shadow: 0 0 40px #fff;
+    max-width: 600px;
+  }
+  
+  /* Estilo para el botón de volver a la página de inicio */
+  .btn {
+    display: inline-block;
+    padding: 10px 20px;
+    background-color: $primary-color;
+    color: #fff;
+    text-decoration: none;
+    border-radius: 5px;
+    transition: background-color 0.4s;
+    margin-top: 20px;
+  
+    &:hover {
+      background-color: $hover-color;
+    }
+  }
+  
+}
+
